# RemoteDrivingStation

./: .gitmodules  README.md  bbuild_on_board.sh  startCarla.sh  xrandr_setup_g15.sh
firmware/traxxas_serial/: traxxas_serial.ino
network_setup/: dds_profile_cyclone.xml  env_variables  gps_local_setup.sh  new_file.xml
src/isaac_rds_sims/: CMakeLists.txt  package.xml
src/rds_configs/: CMakeLists.txt  package.xml
src/rds_configs/config/: manager_config.rviz  readme.md  rviz_config.rviz
src/rds_control/: CMakeLists.txt  package.xml
src/rds_control/include/: engine_node.h  g29_control.h
src/rds_control/launch/: just-here-so-git-dont-forget-me
src/rds_control/src/: engine_node.cpp  g29_control.cpp  g29_hardware_control.cpp  g29_hw_control.cpp
src/rds_description/: CMakeLists.txt  package.xml
src/rds_description/meshes/: full_truck.stl
src/rds_description/urdf/: gps_marker_cybertruck.urdf.xacro
src/rds_gps_py/: package.xml  setup.cfg  setup.py
src/rds_gps_py/rds_gps_py/: marker_publisher.py
src/rds_gui/: CMakeLists.txt  on_board_map.mvc  package.xml  refresh_ui_header.sh  rviz_config.rviz
src/rds_gui/include/rds_gui/: mainwindow.h  ui_mainwindow.h
src/rds_gui/src/: main.cpp  mainwindow.cpp  mainwindow.ui
src/rds_gui/ui/: mainwindow.ui
src/rds_hud/: CMakeLists.txt  package.xml
src/rds_hud/include/: heads_up_definitions.h  heads_up_node.h
src/rds_hud/launch/: web_camera.launch.py
src/rds_hud/src/: heads_up_node.cpp
src/rds_hw_interfaces/: CMakeLists.txt  package.xml
src/rds_hw_interfaces/include/: car_hardware_interface.h
src/rds_hw_interfaces/include/rds_hw_interfaces/: car_hardware_interface.h
src/rds_hw_interfaces/src/: car_hardware_interface.cpp
src/rds_launchers/: CMakeLists.txt  package.xml
src/rds_launchers/config/: cam_params.yaml  front_cam_params.yaml  front_cam_params_camros.yaml  front_cam_params_v4l2.yaml  rear_cam_params.yaml  rear_cam_params_v4l2.yaml
src/rds_launchers/launch/: base_station_bringup.launch.py  manager_bringup.launch.py  on-board-bringup.launch.py
src/rds_msgs/: CMakeLists.txt  package.xml
src/rds_msgs/msg/: EngineInterface.msg  VehicleInterface.msg  VehicleStatus.msg
src/rds_sims/: CMakeLists.txt  package.xml
src/rds_sims/launch/: racetrack_test.launch.py  xml_racetrack_test.launch.xml
src/rds_sims/models/urdf/: test_model.urdf
src/rds_sims/src/: carla_driver.cpp
src/rds_sims/worlds/: racetrack_test.sdf
src/rover_sounds/include/: speaker_node.h
startup_scripts/: base_startup.sh
